--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,6 @@
 
         <div class="sre-stats">
             <div class="stat-item"><span>99.9%</span><br>Uptime Target</div>
-            <div class="stat-item"><span>-30%</span><br>Toil Reduction Target</div>
             <div class="stat-item"><span>5y+</span><br>Leadership</div>
         </div>
         
@@ -50,6 +49,16 @@
                 I combine a <strong>collaborative leadership style</strong> with deep technical 
                 expertise in <strong>observability and system reliability</strong>.
             </p>
+        </div>
+
+        <div class="gitops-status">
+        <div class="status-badge">
+            <span class="dot"></span>
+            <span class="status-text">Site Status: <strong>Healthy</strong></span>
+        </div>
+        <div class="sync-info">
+            <i class="fas fa-sync-alt"></i> Controlled by <strong>ArgoCD</strong>
+        </div>
         </div>
         
 </section>
