--- a/app/index.html
+++ b/app/index.html
@@ -269,4 +269,21 @@
     <script src="app.js"></script>
     <script src="menu.js"></script>
 </body>
+<footer class="footer">
+    <div class="footer-container">
+        <div class="footer-info">
+            <p>&copy; 2026 Daniel Schwartz</p>
+            <p class="tech-stack">
+                Hosted on K3s | Managed with ArgoCD | 
+                <a href="https://github.com/DanielSchwartz1/personal-website" target="_blank" class="repo-link">
+                    <i class="fab fa-github"></i> View Infrastructure Code
+                </a>
+            </p>
+        </div>
+        <div class="footer-links">
+            <a href="impressum.html">Impressum</a>
+            <a href="dataprivacy.html">Data Privacy</a>
+        </div>
+    </div>
+</footer>
 </html>
